# cheby

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  pyproject.toml  setup.py
.github/: verilator_apptainer
.github/workflows/: ci.yml
debian/: cheby.lintian-overrides  control  copyright  rules
doc/: .gitignore  Gemfile  Makefile  cheby-extensions.adoc  cheby-schema.txt  cheby-ug.txt  gena-conversion.txt
doc/extensions/: README.md
doc/srcs/: counter.cheby  main.tex
examples/axi4-gpio/: axi4_lite_if.sv  axi_gpio.sv  axi_gpio_expanded.sv  build.sh  gpios.cheby  gpios.vhdl  gpios_tb.vhdl
integration/: cern-ci.sh
proto/: .coveragerc  ccdb.py  cheby-local.py  cheby.py  gena2cheby.py  genaconv.py  tests.py  wbgen2cheby.py
schemas/: cheby.yaml  field.yaml  memory.yaml  register.yaml  repeat.yaml  submap.yaml  x-hdl.yaml
testfiles/: array1.yaml  array2.yaml  block1.yaml  block2.yaml  block3.yaml  block4.yaml  cern_info.cheby  demo.wb  demo.yaml  demo_all-consts.h  demo_all-consts.sv  demo_all-consts.v  demo_all-consts.vhdl  demo_all-consts.vhdl-ohwr  demo_all.cheby  demo_all_old.cheby  demo_all_sub.cheby  err_align_type1.yaml  err_arr1.yaml  err_arr2.yaml  err_block_size1.yaml  err_bus_name.yaml  err_cnt.cheby  err_field1.yaml  err_field2.yaml  err_field3.yaml  err_field4.yaml  err_field5.yaml  err_field6.yaml  err_field_name1.yaml  err_field_name2.yaml  err_field_preset1.yaml  err_name_type1.yaml  err_noelements.yaml  err_reg_acc1.yaml  err_reg_acc2.yaml  err_reg_addr1.yaml  err_reg_addr2.yaml  err_reg_name1.yaml  err_reg_name2.yaml  (+41 more)
(+1615 files in other folders)
